--- a/cai_garland/training/train_nmt.config/config.yaml
+++ b/cai_garland/training/train_nmt.config/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - data: 84000-parallel-sentences-3-registers-only
-  - model: olive-cormorant-bart
+  - model: olive-cormorant-x3-bart
   - training: basic_with_bleu
   - training_preprocess: basic
   - override hydra/job_logging: colorlog
