Fix stage naive-unconcatted

--- a/cai_garland/data/parallel_dataset_prep.config/stages/naive-unconcatted.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/naive-unconcatted.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - shuffle/no-shuffle@naive-concats
+  - sequencing/in-order@naive-concats
   - concat/no-concat@naive-concats
 
 naive-concats:
