--- a/cai_garland/data/parallel_dataset_prep.config/input/84000-parallel-sentences.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/input/84000-parallel-sentences.yaml
@@ -48,9 +48,7 @@ preprocessing:
     - _target_: cai_garland.utils.str_processors.ProcessorRemoveCharacters
       _args_: ["0-9"]
     - _target_: cai_garland.utils.str_processors.ProcessorRemoveCharacters
-      _args_: [")"]
+      _args_: [")\""]
     - _target_: cai_garland.utils.str_processors.ProcessorBlankOutAllWithCharacters
       _args_: ["]{"]
-    - _target_: cai_garland.utils.str_processors.ProcessorBlankOutDanglingBrackets
-      _args_: ["\""]
     - _target_: cai_garland.utils.str_processors.ProcessorRemoveConsecutiveSpaces
