Refactor config for parallel dataset prep
Main change is to move preprocessing funcs to stages

--- a/cai_garland/data/parallel_dataset_prep.config/stages/concatted-registers.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/concatted-registers.yaml
@@ -1,4 +1,5 @@
 defaults:
+  - datasets/84000-parallel-sentences@concatted-registers
   - shuffle/no-shuffle@concatted-registers
   - registers@concatted-registers
   - concat/concat@concatted-registers
