--- a/cai_garland/data/parallel_dataset_prep.config/stages/naive-concats.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/naive-concats.yaml
@@ -1,4 +1,5 @@
 defaults:
+  - datasets/84000-parallel-sentences@naive-concats
   - shuffle/no-shuffle@naive-concats
   - concat/concat@naive-concats
 
