--- a/cai_garland/data/parallel_dataset_prep.config/stages/dictionary.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/dictionary.yaml
@@ -1,3 +1,6 @@
+defaults:
+  - datasets/dictionary@dictionary
+
 dictionary:
   # Function to pull the dataset
   pull_func:
@@ -6,15 +9,6 @@ dictionary:
   # Function to prepare the dataset
   prep_func:
     _target_: cai_garland.data.parallel_dataset_prep._prep_linear_dataset
-
-  # Glob for dictionaries to augment with
-  dictionary_augment_glob: "processed_datasets/tibetan-english-dictionaries-for-aug/*"
-
-  # Pick out the best word. If not set, will simply flatten the dictionaries
-  pick_best_word: true
-
-  # Maximum length of every English definition for a word to count as well-defined
-  well_defined_word_max_en_len: 20
 
   # Do not put anything from this dataset in the validation data
   exclude_from_validation: True
