Remove angle brackets from folios

--- a/cai_garland/data/parallel_dataset_prep.config/stages/datasets/84000-parallel-folios.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/datasets/84000-parallel-folios.yaml
@@ -24,7 +24,7 @@ dataset:
       - _target_: cai_garland.utils.str_processors.ProcessorRemoveAccents
       - _target_: cai_garland.utils.str_processors.ProcessorLowerCase
       - _target_: cai_garland.utils.str_processors.ProcessorRemoveBracketed
-        _args_: ["{([", "])}"]
+        _args_: ["{([<", ">])}"]
       - _target_: cai_garland.utils.str_processors.ProcessorRemoveCharacters
         _args_: ["0-9"]
       - _target_: cai_garland.utils.str_processors.ProcessorRemoveCharacters
