Change soft segmenter for pooled context decoding

--- a/cai_garland/cli/translate.config/generation/medium-beam-long-inputs-pooled-context.yaml
+++ b/cai_garland/cli/translate.config/generation/medium-beam-long-inputs-pooled-context.yaml
@@ -32,7 +32,7 @@ segmentation:
   #
   #   The recommended segmenters are: SegmenterNone, SegmenterOpeningShad, SegmenterTargetTokenCount
   soft_segmentation:
-    _target_: cai_garland.utils.segmenters.SegmenterTargetTokenCount
+    _target_: cai_garland.utils.segmenters.SegmenterOpeningShad
   soft_segmenter_kwargs: {}
 
 processing:
