--- a/cai_garland/training/train_nmt.config/data/84000-parallel-sentences-raw-with-context.yaml
+++ b/cai_garland/training/train_nmt.config/data/84000-parallel-sentences-raw-with-context.yaml
@@ -16,9 +16,9 @@ context_injection:
   context_lookup_key: english
 
   context_encoder: facebook/bart-base
-
   batch_size: 16
   cuda: true
+  overwrite_existing_embeddings: false
 
 # The token to force as the first generated token after the 'decoder_start_token_id'. Useful for multilingual models
 #   like mBART where the first generated token needs to be the target language token. Usually it is the target
