--- a/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
+++ b/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
@@ -5,6 +5,7 @@ seed: 12345
 
 per_device_train_batch_size: 24
 per_device_eval_batch_size: 24
+gradient_accumulation_steps: 1
 
 num_train_epochs: 9
 
