--- a/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
+++ b/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
@@ -3,9 +3,13 @@ defaults:
 
 seed: 12345
 
-per_device_train_batch_size: 24
-per_device_eval_batch_size: 24
-gradient_accumulation_steps: 1
+# per_device_train_batch_size: 24
+# per_device_eval_batch_size: 24
+# gradient_accumulation_steps: 1
+
+per_device_train_batch_size: 4
+per_device_eval_batch_size: 4
+gradient_accumulation_steps: 6
 
 num_train_epochs: 9
 
