--- a/cai_garland/training/train_nmt.config/config.yaml
+++ b/cai_garland/training/train_nmt.config/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - data: 84000-parallel-sentences-raw-with-context
-  - model: olive-cormorant-bart-pooled-context-injection
+  - model: olive-cormorant-nllb
   - training: basic_with_bleu
   - training_preprocess: basic
   - override hydra/job_logging: colorlog
