--- a/cai_garland/cli/translate.config/generation/medium-beam-short-inputs.yaml
+++ b/cai_garland/cli/translate.config/generation/medium-beam-short-inputs.yaml
@@ -2,6 +2,10 @@ generation:
   method: beam-search
   num_beams: 50
 
+  generator_kwargs:
+    repetition_penalty: 2.2
+    no_repeat_ngram_size: 3
+
 segmentation:
   # Hard segmentation is applied before preprocessing. Hard segments reset the beam generation state. Note that file
   #   boundaries always count as hard segments.
@@ -10,7 +14,7 @@ segmentation:
   #
   #   The recommended segmenters are: SegmenterNone, SegmenterOpeningShad, SegmenterLineBreak, SegmenterDoubleShad
   hard_segmentation:
-    _target_: cai_garland.utils.segmenters.SegmenterOpeningShad
+    _target_: cai_garland.utils.segmenters.SegmenterNone
   hard_segmenter_kwargs: {}
 
   # Soft segmentation is applied before preprocessing. Soft segments do _not_ reset the beam generation state.
@@ -19,8 +23,8 @@ segmentation:
   #
   #   The recommended segmenters are: SegmenterNone, SegmenterOpeningShad, SegmenterTargetTokenCount
   soft_segmentation:
-    _target_: cai_garland.utils.segmenters.SegmenterNone
-  soft_segmenter_kwargs: {}
+    _target_: cai_garland.utils.segmenters.SegmenterTargetTokenCount
+  soft_segmenter_kwargs: {"max_length": 64}
 
 processing:
   # Preprocessing is applied after hard segmentation (if any) but before soft segmentation (if any).
