--- a/cai_garland/training/train_nmt.config/model/olive-cormorant-nllb.yaml
+++ b/cai_garland/training/train_nmt.config/model/olive-cormorant-nllb.yaml
@@ -11,3 +11,6 @@ max_source_length: 128
 # The maximum total sequence length for target text after tokenization. Sequences longer than this will be truncated,
 #   sequences shorter will be padded
 max_target_length: 1024
+
+# Some decoders, such as NLLB/M2M, need a forced token after BOS to indicate the language
+decoder_has_forced_bos_token: true
