--- a/cai_garland/data/parallel_dataset_prep.config/config.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/config.yaml
@@ -1,9 +1,9 @@
 defaults:
   - output: uncased-no-accents
   - stages:
-    - naive-unconcatted
+    # - naive-unconcatted
     # - naive-concats
-    # - naive-concats-sequenced
+    - naive-concats-sequenced
     # - concatted-registers
     # - concatted-registers-sequenced
     # - unconcatted-registers-sequenced
