--- a/cai_garland/training/train_nmt.config/model/nllb-with-context-for-zst.yaml
+++ b/cai_garland/training/train_nmt.config/model/nllb-with-context-for-zst.yaml
@@ -18,4 +18,4 @@ decoder_has_forced_bos_token: true
 # Freezing parts of the model during training
 freeze:
   lm_head: true
-  encoder: true
+  encoder: false
