Update context lookup key

--- a/cai_garland/training/train_nmt.config/dataset_construction/context-injection.yaml
+++ b/cai_garland/training/train_nmt.config/dataset_construction/context-injection.yaml
@@ -1,6 +1,6 @@
 context_injection:
   context_file: processed_datasets/84000-parallel-sentences-raw-with-context/contexts.pkl
-  context_lookup_key: english
+  context_lookup_key: target
 
   # Whether to run the contexts through an encoder
   raw_contexts: false
