--- a/cai_garland/training/train_nmt.config/data/nllb-augmentation-bo-it.yaml
+++ b/cai_garland/training/train_nmt.config/data/nllb-augmentation-bo-it.yaml
@@ -9,6 +9,10 @@ nllb-augmentation-bo-it:
   # Name of the training split to use in the overall dataset (defaults to "train" if omitted)
   train_split_name: bod_Tibt.ita_Latn
 
+  # Rate at which the training split will be interleaved with other datasets. The first dataset in the list is the
+  #   primary one and will have probability set to add to 1.
+  interleaving_rate: 0.1
+
   # The token to force as the first generated token after the 'decoder_start_token_id'. Useful for multilingual models
   #   like mBART where the first generated token needs to be the target language token. Usually it is the target
   #   language token
