--- a/cai_garland/training/train_nmt.config/config.yaml
+++ b/cai_garland/training/train_nmt.config/config.yaml
@@ -1,6 +1,7 @@
 defaults:
   - data:
     - 84000-parallel-sentences-raw-with-context
+    - nllb-augmentation-bo-it
   - dataset_construction: context-injection
   - model: nllb-with-context-for-zst
   - training: basic_with_bleu
