Output raw bo-en NLLB augmentation data

--- a/cai_garland/data/dataset_prep.config/synthetic_nllb_data.yaml
+++ b/cai_garland/data/dataset_prep.config/synthetic_nllb_data.yaml
@@ -13,7 +13,7 @@ hydra:
 languages:
   source: bod_Tibt
   target: eng_Latn
-  final: ita_Latn
+  # final: ita_Latn
 
 dataset:
   translation_key: translation
