--- a/cai_garland/training/train_nmt.config/config.yaml
+++ b/cai_garland/training/train_nmt.config/config.yaml
@@ -3,7 +3,7 @@ defaults:
     - 84000-parallel-sentences-raw-with-context-cased
     # - nllb-augmentation-bo-it
     # - nllb-augmentation-bo-en
-  - dataset_construction: context-injection
+  - dataset_construction: context-injection-cased
   - model: olive-cormorant-nllb-pooled-context-injection-cased
   - training: basic_with_bleu
   - training_preprocess: basic
