--- a/setup-research.cfg
+++ b/setup-research.cfg
@@ -19,10 +19,24 @@ classifiers =
 packages = cai_garland
 python_requires = >=3.6
 install_requires =
-    torch==1.12.*
-    transformers==4.22.*
-    sentencepiece==0.1.96
-    scikit-learn==1.1.*
-    hydra-core==1.2.*
-    hydra-colorlog==1.2.*
-    colorama==0.4.*
+    pandas>=1.4.2
+    dask[distributed]>=2022.5.1
+    beautifulsoup4>=4.11.1
+    lxml>=4.8.0
+    pyewts>=0.1.3
+    torch>=1.11.0
+    transformers>=4.19.2
+    datasets>=2.3.2
+    sacrebleu>=2.1.0
+    matplotlib>=3.5.2
+    bokeh>=2.1.1
+    sentencepiece>=0.1.96
+    scikit-learn>=1.1.1
+    tensorboard>=2.9.1
+    hydra-core>=1.2.0
+    hydra-colorlog>=1.2.0
+    colorama>=0.4.4
+    psutil>=5.9.1
+    zarr>=2.12.0
+    lmdb>=1.3.0
+    evaluate>=0.2.2
