--- a/setup.cfg
+++ b/setup.cfg
@@ -19,10 +19,10 @@ classifiers =
 packages = cai_garland
 python_requires = >=3.6
 install_requires =
-    torch==1.12.*
-    transformers==4.22.*
-    sentencepiece==0.1.96
-    scikit-learn==1.1.*
-    hydra-core==1.2.*
-    hydra-colorlog==1.2.*
-    colorama==0.4.*
+    torch>=1.12.1
+    transformers>=4.23.1
+    sentencepiece>=0.1.96
+    scikit-learn>=1.1.2
+    hydra-core>=1.2.0
+    hydra-colorlog>=1.2.0
+    colorama>=0.4.5
