Prepare for PyPI submission

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,6 @@ classifiers =
     Topic :: Scientific/Engineering :: Artificial Intelligence
 
 [options]
-packages = cai_garland
 python_requires = >=3.6
 install_requires =
     torch>=1.12.1
@@ -26,3 +25,4 @@ install_requires =
     hydra-core>=1.2.0
     hydra-colorlog>=1.2.0
     colorama>=0.4.5
+include_package_data = True
