Change Hydra verbosity setting

--- a/src/cai_garland/data/dataset_prep.config/parallel_dataset_prep.yaml
+++ b/src/cai_garland/data/dataset_prep.config/parallel_dataset_prep.yaml
@@ -47,7 +47,7 @@ output:
   filter_longer_than_max_source_length: false
 
 hydra:
-  # verbose: cai_garland.data
+  # verbose: __main__
   run:
     dir: .
   output_subdir: ~
