--- a/src/cai_garland/training/train_nmt.config/config.yaml
+++ b/src/cai_garland/training/train_nmt.config/config.yaml
@@ -4,7 +4,7 @@ defaults:
     # - nllb-augmentation-bo-it
     # - nllb-augmentation-bo-en
     - mined
-  - dataset_construction: no-context
+  - dataset_construction: context-injection
   - model: olive-cormorant-nllb-large-pooled-context-injection
   - training: basic_with_bleu
   - training_preprocess: basic
