Mined dataset in parallel dataset prep

--- a/src/cai_garland/data/dataset_prep.config/parallel_dataset_prep.yaml
+++ b/src/cai_garland/data/dataset_prep.config/parallel_dataset_prep.yaml
@@ -4,6 +4,7 @@ defaults:
     # - naive-unconcatted
     # - naive-concats
     - naive-concats-sequenced
+    - mined-concats-sequenced
     # - concatted-registers
     # - concatted-registers-sequenced
     # - unconcatted-registers-sequenced
