--- a/src/cai_garland/training/train_nmt.config/config.yaml
+++ b/src/cai_garland/training/train_nmt.config/config.yaml
@@ -1,10 +1,11 @@
 defaults:
   - data:
-    - 84000-parallel-sentences-raw-with-context
+    - largest-parallel-with-context
+    # - 84000-parallel-sentences-raw-with-context
     # - nllb-augmentation-bo-it
     # - nllb-augmentation-bo-en
-    - mined
-  - dataset_construction: context-injection
+    # - mined
+  - dataset_construction: context-injection-mined
   - model: olive-cormorant-nllb-large-pooled-context-injection
   - training: basic_with_bleu
   - training_preprocess: basic
