Train without context

--- a/src/cai_garland/training/train_nmt.config/config.yaml
+++ b/src/cai_garland/training/train_nmt.config/config.yaml
@@ -5,8 +5,8 @@ defaults:
     # - nllb-augmentation-bo-it
     # - nllb-augmentation-bo-en
     # - mined
-  - dataset_construction: context-injection-mined
-  - model: olive-cormorant-nllb-pooled-context-injection
+  - dataset_construction: no-context
+  - model: olive-cormorant-nllb
   - training: basic_with_bleu
   - training_preprocess: basic
   - override hydra/job_logging: colorlog
@@ -19,14 +19,14 @@ interleave:
 hydra:
   verbose: cai_garland.training
   run:
-    dir: ${oc.env:CAI_TEMP_PATH}/training_results/nmt/olive-cormorant-nllb-600M-pooled-context-injection-normalized
+    dir: ${oc.env:CAI_TEMP_PATH}/training_results/nmt/olive-cormorant-nllb-600M
 
 # Uncomment this to skip evaluation
 # training:
 #   evaluation_strategy: "NO"
 
-# pretrained_checkpoint: ${oc.env:CAI_TEMP_PATH}/training_results/nmt/olive-cormorant-nllb-600M-pooled-context-injection-normalized/temp
-# resume_from_checkpoint: ${oc.env:CAI_TEMP_PATH}/training_results/nmt/olive-cormorant-nllb-600M-pooled-context-injection-normalized/temp
+# pretrained_checkpoint: ${oc.env:CAI_TEMP_PATH}/training_results/nmt/olive-cormorant-nllb-600M/temp
+# resume_from_checkpoint: ${oc.env:CAI_TEMP_PATH}/training_results/nmt/olive-cormorant-nllb-600M/temp
 
 # Overwrite the cached training and evaluation sets
 overwrite_cache: false
